--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 .App {
   text-align: center;
+  display: flex;
+  align-items: center;
+  flex-flow: column;
 }
 
 .App-logo {
@@ -35,4 +38,23 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+table{
+  display: flex;
+  justify-content: center;
+  flex-flow: column;
+}
+
+.contactImg{
+  width: 50px;
+}
+
+tr{
+  display: flex;
+  margin: 20px;
+}
+
+td{
+  display: flex;
 }
